ExpenseTrackerBackend/src/main/java/com/example/expenseit/errors/InvalidDataException.java
package com.example.expenseit.errors;

import org.springframework.http.HttpStatus;
import org.springframework.web.bind.annotation.ResponseStatus;

public class InvalidDataException extends RuntimeException{

    public InvalidDataException(String message){
        super(message);
    }
}
